# ffmpeg-android-video-decoder

./: README.md
app/: CMakeLists.txt  build.gradle
app/libs/include/libavcodec/: avcodec.h
app/libs/include/libavformat/: avformat.h
app/libs/include/libavutil/: common.h  pixfmt.h
app/libs/include/libjpeg-turbo/: jmorecfg.h
app/src/androidTest/java/com/opensource/ffmpeg_android_video_decoder/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/include/libavcodec/: version.h
app/src/main/cpp/include/libavfilter/: avfilter.h  version.h
app/src/main/cpp/include/libavformat/: avio.h  version.h
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/java/com/opensource/ffmpeg_android_video_decoder/: FFmpegUtils.java  MainActivity.java  Utils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/opensource/ffmpeg_android_video_decoder/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
